--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dts-city",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -17,6 +17,7 @@
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.8.1",
         "html-webpack-plugin": "^5.5.3",
+        "process": "^0.11.10",
         "style-loader": "^3.3.3",
         "url-loader": "^4.1.1",
         "webpack": "^5.88.2",
